--- a/app/templates/authentication.html
+++ b/app/templates/authentication.html
@@ -39,7 +39,7 @@
         <p>
           Keep track of important information, share ideas with colleagues, organise your todos into boards. The possibilities are endless.
         </p>
-        <img src="{{ url_for('static', filename='images/product-use-example.png') }}" width="550px">
+        <img src="{{ url_for('static', filename='images/product-use-example.PNG') }}" width="550px">
         <p>Try today! Click the button up the top to create an account and get started!</p>
       </div>
     </div>
